; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_action_util.c_clear_oneshot_layer_state.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_action_util.c_clear_oneshot_layer_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@oneshot_layer_data = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clear_oneshot_layer_state(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @oneshot_layer_data, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %2, align 4
  %6 = xor i32 %5, -1
  %7 = load i32, i32* @oneshot_layer_data, align 4
  %8 = and i32 %7, %6
  store i32 %8, i32* @oneshot_layer_data, align 4
  %9 = call i32 (...) @get_oneshot_layer_state()
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %19, label %11

11:                                               ; preds = %1
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @oneshot_layer_data, align 4
  %14 = icmp ne i32 %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %11
  %16 = call i32 (...) @get_oneshot_layer()
  %17 = call i32 @layer_off(i32 %16)
  %18 = call i32 (...) @reset_oneshot_layer()
  br label %19

19:                                               ; preds = %15, %11, %1
  ret void
}

declare dso_local i32 @get_oneshot_layer_state(...) #1

declare dso_local i32 @layer_off(i32) #1

declare dso_local i32 @get_oneshot_layer(...) #1

declare dso_local i32 @reset_oneshot_layer(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
